<resources>
    <string name="app_name">team5-project</string>
    <string name="title_activity_add_item">Item</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_add_recipe">Recipe</string>
    <string name="title_activity_shopping_list">Shopping</string>
    <string name="foodName">Food Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="enter_item">Enter Item</string>
    <string name="add_item_title">Add Item</string>
    <string name="add_item_name">NAME:</string>
    <string name="add_item_quantity">QUANTITY:</string>
    <string name="add_item_accept_btn">ADD ITEM</string>
    <string name="add_item_cancel_btn">CANCEL</string>
    <string name="add_recipe_title">Add New Recipe</string>
    <string name="add_recipe_name">NAME:</string>
    <string name="add_recipe_item">ITEM:</string>
    <string name="add_recipe_direction">DIRECTION::</string>
    <string name="add_recipe_accept_btn">ADD RECIPE</string>
    <string name="add_recipe_cancel_btn">CANCEL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_item">Scan Item</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_display_item">DisplayItemActivity</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete">Delete Item</string>
</resources>
