<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemToRecipeActivity">

    <TextView
        android:id="@+id/textView_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_item_title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item_name"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textView_add_item"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        />

    <Spinner
        android:id="@+id/spinner_item"
        android:layout_width="244sp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textView_name"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/textView_add_item"
        android:layout_marginTop="30dp">

    </Spinner>

    <TextView
        android:id="@+id/textView_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item_quantity"
        app:layout_constraintTop_toBottomOf="@id/textView_name"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/editText_quantity"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_quantity"
        app:layout_constraintStart_toEndOf="@id/textView_quantity" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item_accept_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_item_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>

</android.support.constraint.ConstraintLayout>