<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_recipe_title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView_recipe"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_recipe_name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/textView_name"
                app:layout_constraintStart_toEndOf="@id/textView_name" />

            <TextView
                android:id="@+id/textView_item"
                android:layout_width="84dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/add_recipe_item"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_name" />


            <LinearLayout
                android:id="@+id/linearLayout_item"
                android:orientation="vertical"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textView_item"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp">

            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton_addItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:onClick="addItemBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout_item"
                app:srcCompat="@drawable/ic_add_circle_black_24dp" />

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_recipe_description"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/imageButton_addItem"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"/>

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/textView_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"/>



        </android.support.constraint.ConstraintLayout>


    </ScrollView>

    <Button
        android:id="@+id/button_add"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe_accept_btn"
        app:layout_constraintTop_toBottomOf="@id/scrollView_recipe"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="addRecipeBtn"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe_cancel_btn"
        app:layout_constraintTop_toBottomOf="@id/scrollView_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="cancelBtn"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="10dp"/>


</android.support.constraint.ConstraintLayout>